--- a/language/ru.json
+++ b/language/ru.json
@@ -19,5 +19,30 @@
     "Liceum": "Лицей",
     "Gimnasium": "Гимназия",
     "Primary School": "Начальная школа",
-    "Middle School": "Средняя школа"
+    "Middle School": "Средняя школа",
+    "Description": "Описание",
+    "Registers state": "Состояние журналов",
+    "Information about archive": "Информация об архиве",
+    "Series": "Серия",
+    "Select": "Выберите",
+    "Start Date": "Начальная дата",
+    "End Date": "Конечная дата",
+    "Number of registries": "Количество журналов",
+    "Number of registrations": "Количество записей",
+    "Language": "Язык",
+    "The state of archive": "Состояние архива",
+    "From other institution": "Из другого учебного заведения",
+    "Add": "Добавить",
+    "Preview": "Просмотр",
+    "bad": "плохое",
+    "middle": "среднее",
+    "good": "хорошее",
+    "romanian language, latin graphic": "румынский язык, латинская графика",
+    "romanian language, chyrilic graphic": "румынский язык, кирилица",
+    "russian language": "русский язык",
+    "gagauzian language": "гагаузский язык",
+    "bulgarian language": "болгарский язык",
+    "other language": "другой язык",
+    "Thank you!": "Спасибо!",
+    "Thank you for completing questionnaire!": "Большое спасибо за заполнение анкеты!"
 }
